--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    	<script src="public/modernizr.js"></script>
-		<script src="public/jquery.min.js"></script>
-    	<script src="public/foundation.min.js"></script>
+    	<script src="{{ site.baseurl }}/public/modernizr.js"></script>
+		<script src="{{ site.baseurl }}/public/jquery.min.js"></script>
+    	<script src="{{ site.baseurl }}/public/foundation.min.js"></script>
 
         <title>{{ page.title }}</title>
         <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" >
