--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     	<script src="{{ site.baseurl }}/public/modernizr.js"></script>
-		<script src="{{ site.baseurl }}/public/jquery.min.js"></script>
+		  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     	<script src="{{ site.baseurl }}/public/foundation.min.js"></script>
 
         <title>{{ page.title }}</title>
