added link to MPS

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
         <div class="small-12 columns">
           <div class="nav">
             <a href="http://piazza.com/illinois/spring2015/cs498rk">PIAZZA</a>&nbsp;&nbsp;&nbsp;
-            <a href="http://uiuc-web-programming.github.io/sp2015">LABS and MPS</a>&nbsp;&nbsp;&nbsp;
+            <a href="http://uiuc-web-programming.github.io/sp2015">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
             <a href="https://courses.engr.illinois.edu/cs498rk1/resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
           </div>
           <div class="course_title"><a href="https://courses.engr.illinois.edu/cs498rk1/index.html">THE ART AND SCIENCE OF WEB PROGRAMMING</a></div>
