--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,20 +11,20 @@
         <title>{{ page.title }}</title>
         <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" >
     </head>
-    <body>    
+    <body>
       <div class="row course_header">
         <div class="small-12 columns">
           <div class="nav">
-            <a href="http://piazza.com/illinois/spring2015/cs498rk">PIAZZA</a>&nbsp;&nbsp;&nbsp;
-            <a href="http://uiuc-web-programming.github.io/sp2015">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
+            <a href="http://piazza.com/illinois/spring2016/cs498rk">PIAZZA</a>&nbsp;&nbsp;&nbsp;
+            <a href="http://uiuc-web-programming.github.io/sp2016">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
             <a href="https://courses.engr.illinois.edu/cs498rk1/resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
           </div>
-          <div class="course_title"><a href="https://courses.engr.illinois.edu/cs498rk1/index.html">THE ART AND SCIENCE OF WEB PROGRAMMING</a></div>
+          <div class="course_title"><a href="https://courses.engr.illinois.edu/cs498rk1">THE ART AND SCIENCE OF WEB PROGRAMMING</a></div>
           <div class="course_schedule">
-            <div class="">CS498RK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SPRING 2015 UIUC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MONDAY AND WEDNESDAY&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;11AM-12.15PM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIEBEL 0216</div>
+            <div class="">CS498RK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SPRING 2015 UIUC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MONDAY AND WEDNESDAY&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;11AM-12.15PM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DCL 1310</div>
           </div>
         </div>
-      </div>  
+      </div>
 
        <div class="row">
           <div class="small-12 medium-12 large-12 columns">
