--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
 {% include head.html %}
 
 
-    	<div class="heading">{{ page.title }}</div>
+    	<div class="heading" style="">{{ page.title }}</div>
 
     	{{ content }}
-	
+
 
 {% include foot.html %}
