--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 {% include head.html %}
 
 
-    	<div class="heading" style="">{{ page.title }}</div>
+    	<div class="heading">{{ page.title }}</div>
 
     	{{ content }}
 
