--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,12 +4,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    	<script src="{{ "/public/modernizr.js" | prepend: site.baseurl}}"></script>
+    	<!-- <script src="{{ site.baseurl }}/public/modernizr.js"></script> -->
+      <script src="./public/modernizr.js"></script>
 		  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    	<script src="{{ site.baseurl }}/public/foundation.min.js"></script>
+      <!-- <script src="{{ site.baseurl }}/public/foundation.min.js"></script> -->
+    	<script src="./public/foundation.min.js"></script>
 
         <title>{{ page.title }}</title>
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" >
+        <!-- <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" > -->
+        <link rel="stylesheet" href="./css/main.css" >
     </head>
     <body>
       <div class="row course_header">
