--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,14 +15,14 @@
       <div class="row course_header">
         <div class="small-12 columns">
           <div class="nav">
-            <a href="http://piazza.com/illinois/spring2016/cs498rk">PIAZZA</a>&nbsp;&nbsp;&nbsp;
-            <a href="http://uiuc-web-programming.github.io/sp2016">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
+            <a href="http://piazza.com/illinois/fall2016/cs498rk">PIAZZA</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://uiuc-web-programming.github.io/fa2016/">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
             <a href="https://courses.engr.illinois.edu/cs498rk1/resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
           </div>
           <div class="course_title_above"><a href="https://courses.engr.illinois.edu/cs498rk1/">The Art and Science of</a></div>
           <div class="course_title"><a href="https://courses.engr.illinois.edu/cs498rk1/" class="ng-binding">Web Programming</a></div>
           <div class="course_schedule">
-            <div class="">CS498RK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SPRING 2016 UIUC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MONDAY AND WEDNESDAY&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;11AM-12.15PM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DCL 1310</div>
+            <div class="">CS498RK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FALL 2016 UIUC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MONDAY AND WEDNESDAY&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;11AM-12.15PM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DCL 1310</div>
           </div>
         </div>
       </div>
